--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2E7TP0565"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2E7TP0565" crossorigin="anonymous"></script>
     <script>
+      response.setHeader('Set-Cookie', 'HttpOnly;Secure;SameSite=Strict');
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
+
       gtag('js', new Date());
 
       gtag('config', 'G-S2E7TP0565');
