remove cookies thirdparty

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2E7TP0565" crossorigin="anonymous"></script>
     <script>
-      response.setHeader('Set-Cookie', 'HttpOnly;Secure;SameSite=Strict');
+      // response.setHeader('Set-Cookie', 'HttpOnly;Secure;SameSite=Strict');
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
